# parallelisms-benchmark-copilot

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmark/: __init__.py
benchmark/analysis/: __init__.py  anomaly_detector.py  bottleneck.py  cost_estimator.py  kv_cache_analyzer.py  pareto.py  pipeline_bubble.py  quantization_analyzer.py  recommender.py  regression.py  roofline.py  scalability.py  scheduler_analyzer.py  slo_evaluator.py  speculative_analyzer.py  statistical.py  workload_characterizer.py
benchmark/config/: __init__.py  schema.py  space_explorer.py  sweep.py  validation.py
benchmark/dag/: __init__.py  pipeline.py
benchmark/metrics/: __init__.py  collector.py  prometheus_bridge.py
benchmark/profiler/: attention_profiler.py  communication_profiler.py  (+6 more)
benchmark_config/: __init__.py  result_schema.py  schema.py  sweep.py  validation.py
k8s/: configmap-template.yaml  job-template.yaml
parallelisms_benchmark.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: run_benchmark.sh
tests/: test_bottleneck.py  test_config_validation.py  test_cost_estimator.py  test_exporter.py  test_gpu_profiler.py  test_helm_and_pipeline_integration.py  test_kubernetes_integration.py  test_metrics_collector.py  test_model_variants.py  test_new_analysis.py  test_new_profilers.py  test_pareto.py  test_pipeline.py  test_prometheus_bridge.py  test_regression.py  test_result_schema.py  test_schema.py  test_slo_evaluator.py  test_statistical.py  test_sweep.py  test_trace_recorder.py  test_trace_recorder_enhanced.py  test_validation.py  test_workload.py
(+18 files in other folders)
